files/etc/network/iptables.rules
# IPV4 FIREWALL RULES
# see http://ipset.netfilter.org/iptables.man.html

*mangle
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:MINIUPNPD - [0:0]

# Mangle (Block?) UDP packets coming from 10.2.x.x to 239.x.x.x on WAN:
-A INPUT -i wan -s 10.2.0.0/16 -d 239.0.0.0/8 -p udp -j DROP

# Mangle prerouting rules according to rules in the MINIUPNPD chain:
-A PREROUTING -i wan -j MINIUPNPD

COMMIT

*nat
:PREROUTING ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:MINIUPNPD - [0:0]
:MINIUPNPD-POSTROUTING - [0:0]

# MiniUPNP daemon routing
-A PREROUTING -i wan -j MINIUPNPD
-A POSTROUTING -o wan -j MINIUPNPD-POSTROUTING

# Masquerade all connections on the WAN interface:
-A POSTROUTING -o wan -j MASQUERADE

# Don't delete the 'COMMIT' line or these rules won't be processed
COMMIT

*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:SERVICES - [0:0]
:MINIUPNPD - [0:0]

# Allow all related/established connections:
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

# Drop any invalid packets:
-A INPUT -m conntrack --ctstate INVALID -j DROP

# Accept all IGMP requests on WAN interface:
-A INPUT -i wan -p igmp -j ACCEPT

# Redirect incoming port 67 to port 68:
-A INPUT -p udp -m udp --sport 67 --dport 68 -j ACCEPT

# Direct WAN interface to check SERVICES table for further rules:
-A INPUT -i wan -j SERVICES

# Drop everything else on the WAN interface:
-A INPUT -i wan -j DROP

# Allow everything on the LO interface:
-A INPUT -i lo -j ACCEPT

# Allow everything on bridge interfaces:
-A INPUT -i br+ -j ACCEPT

# Allow everything on bridge interfaces:
-A INPUT -i mt+ -j ACCEPT

# Reject all other input connections:
-A INPUT -j REJECT

# Forward all related/established connections:
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

# Drop invalid packets:
-A FORWARD -m conntrack --ctstate INVALID -j DROP

# Forward UDP packets from 10.2.x.x to 239.x.x.x on the WAN interface:
-A FORWARD -i wan ! -o wan -s 10.2.0.0/16 -d 239.0.0.0/8 -p udp -j ACCEPT

# Forward packets on the WAN interface according to rules in the MINIUPNPD chain:
-A FORWARD -i wan ! -o wan -j MINIUPNPD

# Forward connections from any bridge interface to WAN:
-A FORWARD -i br+ -o mt+ -j ACCEPT

# Forward connections from any bridge interface to WAN:
-A FORWARD -i mt+ -o br+ -j ACCEPT

# Forward connections from any bridge interface to WAN:
-A FORWARD -i br+ -o wan -j ACCEPT

# Forward any related/established connections back to bridge interfaces:
-A FORWARD -i wan -o br+ -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

# Forward connections from any wireless interface to WAN:
-A FORWARD -i mt+ -o wan -j ACCEPT

# Forward any related/established connections back to wireless interfaces:
-A FORWARD -i wan -o mt+ -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

# Drop any other connections on the WAN interface:
-A FORWARD -i wan -j DROP

# Drop any other connections on the WAN interface:
-A FORWARD -j REJECT

#-A SERVICES -p tcp --dport 22 -j ACCEPT
#-A SERVICES -p udp --dport 1194 -j ACCEPT

# Don't delete the 'COMMIT' line or these rules won't be processed
COMMIT
